--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="card">
           <!--card image-->
           <div class="image">
-            <img src="t1.jpg">
+            <img src="T1.jpg">
           </div>
           <!--card info-->
           <div class="info">
@@ -179,7 +179,7 @@
         <div class="card">
           <!--card image-->
           <div class="image">
-            <img src="t2.jpg">
+            <img src="T2.jpg">
           </div>
           <!--card info-->
           <div class="info">
@@ -200,7 +200,7 @@
         <div class="card">
           <!--card image-->
           <div class="image">
-            <img src="t3.jpg">
+            <img src="T3.jpg">
           </div>
           <!--card info-->
           <div class="info">
