--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
         <!--faq image-->
         <div class="image">
-          <img src="c1.png">
+          <img src="c1.PNG">
         </div>
 
         <div class="accordion-container">
